--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
@@ -72,7 +72,7 @@
             </p:panelGrid>
             
             <p:dataTable id="dokumentyOkresowe" value="#{fakturaView.fakturyokresowe}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyokresoweFiltered}" 
-                         selection="#{fakturaView.gosciwybralokres}" rowKey="#{wpis.hashCode()}" style="max-width: 1800px;" widgetVar="okresTable2" sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
+                         selection="#{fakturaView.gosciwybralokres}" rowKey="#{wpis.hashCode()}" style="max-width: 1820px;" widgetVar="okresTable2" sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
                          rowSelectMode="add"
                          rowsPerPageTemplate="40,120,250,500" paginatorPosition="top" paginator="true" rows="40"
                          >
@@ -186,15 +186,18 @@
                 <p:column headerText="bil." width="20"  sortBy="#{wpis.m13}">  
                     <h:outputText value="#{wpis.m13}" styleClass="#{wpis.m13 gt 0 ? 'wiecejfaktur' : 'zerofaktur'}"/>
                 </p:column>
+                <p:column headerText="tel" width="110" >  
+                    <h:outputText value="#{wpis.dokument.kontrahent.telefondb}"/>
+                </p:column>
                 <p:column width="40" headerText="zaw." sortBy="#{wpis.zawieszona}" filterBy="#{wpis.zawieszona}" filterMatchMode="contains" style="text-align: center;">
                     <h:outputText value="&#x2713;" style="color: red; font-weight: 900;" rendered="#{wpis.zawieszona}"/>
                 </p:column>
-                  <p:column width="40" headerText="wielor." sortBy="#{wpis.wystawtylkoraz}" filterBy="#{wpis.wystawtylkoraz}" filterMatchMode="contains" style="text-align: center;">
+<!--                  <p:column width="40" headerText="wielor." sortBy="#{wpis.wystawtylkoraz}" filterBy="#{wpis.wystawtylkoraz}" filterMatchMode="contains" style="text-align: center;">
                     <h:outputText value="&#x2713;" style="color: blue; font-weight: 900;" rendered="#{!wpis.wystawtylkoraz}"/>
                 </p:column>
                   <p:column width="40" headerText="edycja" sortBy="#{wpis.recznaedycja}" filterBy="#{wpis.recznaedycja}" filterMatchMode="contains" style="text-align: center;">
                     <h:outputText value="&#x2713;" style="color: blue; font-weight: 900;" rendered="#{wpis.recznaedycja}"/>
-                </p:column>
+                </p:column>-->
                 <p:column headerText="prac." width="30" filterBy="#{wpis.sapracownicy}" sortBy="#{wpis.sapracownicy}" style="text-align: center;">  
                     <h:outputText value="&#x2713;" rendered="#{wpis.sapracownicy}" style="color: blue;font-weight: 900;"/>
                 </p:column>
@@ -222,7 +225,6 @@
                         <h:outputText value="#{wpis.dokument.kontrahent_nip}"/>
                         <h:outputText value="email kontrahenta"/>
                         <h:outputText value="#{wpis.dokument.kontrahent.email ne '' ? wpis.dokument.kontrahent.email : 'brak adresu email'}"/>
-                        
 <!--                        <h:outputText value="kwota netto"/>
                         <bcf:outputpl value="#{wpis.dokument.netto}"/>
                         <h:outputText value="kwota vat"/>
