--- a/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
+++ b/kadry/src/main/webapp/parametry/sub/edycjadanych_parametry.xhtml
@@ -203,6 +203,12 @@
                             </f:facet>
                             <p:selectBooleanCheckbox value="#{item11.specjalny}"/>
                         </p:column>
+                         <p:column style="text-align: center;" width="50">
+                            <f:facet name="header">
+                                <h:outputText value="podst. choroba"/>
+                            </f:facet>
+                             <p:selectBooleanCheckbox value="#{item11.podstzasilekchorobowy}"/>
+                        </p:column>
                         <p:column style="text-align: center;" width="50">
                             <f:facet name="header">
                                 <h:outputText value="oddeleg."/>
