--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
@@ -48,8 +48,14 @@
                     </div>
                     <p:hotkey bind="down" global="false"  handler="idz('D');" ignoreAutoUpdate="true"/>
                     <p:hotkey bind="up" global="false" handler="idz('G');" ignoreAutoUpdate="true"/>
-                    <ui:include src="sub/menu/menudokumenty.xhtml"/>
-                    <ui:include src="../sub/wyborpodatnikaFKN.xhtml"/>  
+                    <p:panelGrid columns="2">
+                        <p:column>
+                            <ui:include src="sub/menu/menudokumenty.xhtml"/>
+                        </p:column>
+                        <p:column>
+                            <ui:include src="../sub/wyborpodatnikaFKN.xhtml"/>  
+                        </p:column>
+                    </p:panelGrid>
                     <ui:include src="sub/dialog/dialog_wpisywanie_czydodackonto.xhtml"/>
                     <ui:include src="sub/dialog/dialog_delegacje_stworz.xhtml"/>
                     <ui:include src="sub/dialog/dialog_wpisywanie.xhtml"/>
