--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cechy_zapisow_podsumowanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cechy_zapisow_podsumowanie.xhtml
@@ -13,7 +13,7 @@
     </style>
     <p:dialog id="dialogcechyzapisowpodsumowanie" header="Zestawienie cech zapisów w dokumentach - #{WpisView.podatnikObiekt.nazwapelnaPDF}" 
               widgetVar="dialogcechyzapisowpodsumowanie" 
-              resizable="false"  onShow="ustawdialog('dialogcechyzapisowpodsumowanie','menurmk',1350,700);" 
+              resizable="false"  onShow="ustawdialog('dialogcechyzapisowpodsumowanie','menurmk',1550,700);" 
               closeOnEscape="true" onHide="resetujdialog('dialogcechyzapisowpodsumowanie');" >
         
         <h:form id="formcechyzapisow">
@@ -80,7 +80,7 @@
                          selection="#{cechyzapisuPrzegladView.wybraneZapisyZCecha}" 
                          filteredValue="#{cechyzapisuPrzegladView.zapisyZCechafilter}" rowSelectMode="add"
                          emptyMessage="Nie ma cech zapisów w danym miesiącu rozliczeniowym" styleClass="gridtablicasyntetyczne"
-                         style="width: 1300px; height: 550px; overflow-y: scroll;"  widgetVar="tabelacechyzapisow" rowIndexVar="index"
+                         style="height: 550px; overflow-y: scroll;"  widgetVar="tabelacechyzapisow" rowIndexVar="index"
                          rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{cechyzapisuPrzegladView.zapisyZCecha.size() gt 150 ? 'true':'false'}" rows="150">
                 <p:ajax event="rowSelect" listener="#{cechyzapisuPrzegladView.sumujwybrane}" update=":formcechyzapisow:podsumowanie" global="false"/>
                 <p:ajax event="rowSelectCheckbox" listener="#{cechyzapisuPrzegladView.sumujwybrane}" update=":formcechyzapisow:podsumowanie" global="false"/>
@@ -111,12 +111,16 @@
                           sortBy="#{wpiscechy.stronaWiersza.dokfkS}" filterBy="#{wpiscechy.stronaWiersza.dokfkS}" filterMatchMode="contains">
                     <h:outputText value="#{wpiscechy.stronaWiersza.dokfkS}"/>
                 </p:column>
+                <p:column headerText="kontrahent" width="120"
+                          sortBy="#{wpiscechy.stronaWiersza.kontrahent}" filterBy="#{wpiscechy.stronaWiersza.kontrahent}" filterMatchMode="contains">
+                    <h:outputText value="#{wpiscechy.stronaWiersza.kontrahent}"/>
+                </p:column>
                 <p:column headerText="#{mgs.datadok}" width="80"  styleClass="filter60" sortBy="#{wpiscechy.stronaWiersza.dokfk.datawystawienia}" filterBy="#{wpiscechy.stronaWiersza.dokfk.datawystawienia}">
                     <h:outputText value="#{wpiscechy.stronaWiersza.dokfk.datawystawienia}"/>
                 </p:column>
                 <p:column headerText="data księgowania" width="80" sortBy="#{wpiscechy.stronaWiersza.dokfk.dataujecia}">
                     <h:outputText value="#{wpiscechy.stronaWiersza.dokfk.dataujecia}" >
-                        <f:convertDateTime dateStyle="medium"/>
+                        <f:convertDateTime pattern="yyyy-MM-dd" />
                     </h:outputText>
                 </p:column>
                 <p:column headerText="wiersz" width="300" styleClass="filter160"  sortBy="#{wpiscechy.stronaWiersza.wiersz.opisWiersza}" filterBy="#{wpiscechy.stronaWiersza.wiersz.opisWiersza}" filterMatchMode="contains">
